--- a/index.html
+++ b/index.html
@@ -168,10 +168,7 @@
               </div>
 
               <div class="textarea">
-                <textarea id="story" name="story" rows="7" cols="121">
-
-                </textarea>
-                
+              <input type="text" name="area" id="area" />
               </div>
             </div>
           </form>
